syntax = "proto3";

package presslabs.dashboard.systems.v1;

option (gogoproto.equal_all) = true; // Required for test generation
option (gogoproto.gostring_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.populate_all) = true; // Required for test generation
option (gogoproto.protosizer_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.verbose_equal_all) = true;
option go_package = "github.com/presslabs/dashboard-go/pkg/system/v1";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "presslabs/dashboard/conditions/v1/condition.proto";

// SystemStatus contains system components status
message SystemStatus {
  ApplicationStatus stack = 1 [(gogoproto.nullable) = false];
  ApplicationStatus dashboard = 2 [(gogoproto.nullable) = false];
  ApplicationStatus config_connector = 3 [(gogoproto.nullable) = false];
  AuthStatus auth = 4 [(gogoproto.nullable) = false];
  CRDStatus crd = 5 [(gogoproto.nullable) = false];
}

// ApplicationStatus is the status for an application
message ApplicationStatus {
  repeated ComponentStatus components = 1 [(gogoproto.nullable) = false];
  repeated presslabs.dashboard.conditions.v1.Condition conditions = 2 [(gogoproto.nullable) = false];
}

// ComponentStatus is the status for the dashboard component
message ComponentStatus {
  enum Status {
    // Not set.
    UNSPECIFIED = 0;
    // Component status is unknown.
    UNKNOWN = 1;
    // component status is ready.
    READY = 2;
    // Component status is in prorgess.
    IN_PROGRESS = 3;
  }
  // K8s resource name.
  string name = 1;
  // K8s resource namespace.
  string namespace = 2;
  // The resource kind.
  string kind = 3;
  // The link for more information about the component status.
  string link = 4;
  // The component status.
  Status status = 5;
}

// AuthStatus is the status for the authentication system
message AuthStatus {
  string oidc_issuer = 1;
  repeated presslabs.dashboard.conditions.v1.Condition conditions = 2 [(gogoproto.nullable) = false];
}

message UpdateAuthConfigurationRequest {
  AuthConfiguration configuration = 1 [(gogoproto.nullable) = false];
}

message AuthConfiguration {
  string oidc_issuer = 1;
  string oidc_client_secret = 2;
  string oidc_client_id = 3;
}

// CRDStatus is the status of CRDs used directly by the dashboard
message CRDStatus {
  // A list of CRD names that were not found
  repeated string not_found = 1;
  // A list of CRDs that were found, but had a version not within the expected bounds
  repeated CRD mismatching_versions = 2 [(gogoproto.nullable) = false];
}

// CRD contains data about a Kubernetes Custom Resource Definition
message CRD {
  // The CRD name
  string name = 1;
  // The version the resource belongs in
  string version = 2;
  // The lower bound of the accepted versions
  string lower_version_bound = 3;
  // The upper bound of the accepted versions
  string upper_version_bound = 4;
}

// SystemStatusesService allow managing system components
service SystemStatusesService {
  // GetSystemStatus fetches a dashboard installer
  rpc GetSystemStatus(google.protobuf.Empty) returns (SystemStatus);
  // GetAuthConfiguration fetches the dashboard auth configuration
  rpc GetAuthConfiguration(google.protobuf.Empty) returns (AuthConfiguration);
  // UpdateAuthConfiguration updates the dashboard auth configuration
  rpc UpdateAuthConfiguration(UpdateAuthConfigurationRequest) returns (AuthConfiguration);
}
